Starting invalidations